# ProcessSafeQueue

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  tspkg.yaml
examples/: clearqueue_demo.c  dequeue_demo.c  enqueue_demo.c
include/: error.h  process_safe_queue.h
process_safe_queue/: Makefile  README.md  process_safe_queue.c  safe_queue.c  safe_queue.h  test.c  writeup.txt
sem_indep_process/: Makefile  locks.c  locks.h  rw_init.c  rw_read.c  rw_write.c
src/: README.md  custom_rw_lock.c  custom_rw_lock.h  process_safe_queue.c
tests/: units_test.cpp
